[#67] 백엔드 mongoDB 연동 (#73)
* 🙀 chore: server에서 dotenv 설정

* ✨ feat: mongoDB 연결 설정

* ✨ feat: 샘플용(Todos) CRUD 로직 추가 (프로젝트랑 관련된 코드x)

* 🐛 fix: autogen과 jsdoc에서 세팅되는 openapi(swagger version) version이 달라 생기던 오류 해결

* 🔨 refactor: db 연동 코드 app.ts 파일에서 config폴더의 dbConnection.ts 파일로 이동
