# apps/server/src/docs/swagger-output.json
@@ -1,13 +1,9 @@
 {
-  "swagger": "2.0",
   "info": {
     "version": "1.0.0",
     "title": "REST API",
     "description": ""
   },
-  "host": "localhost:3000",
-  "basePath": "/",
-  "schemes": ["http"],
   "paths": {
     "/welcome": {
       "get": {
@@ -28,21 +24,155 @@
           }
         }
       }
+    },
+    "/todos": {
+      "post": {
+        "tags": [
+          "Todos"
+        ],
+        "summary": "새로운 Todo 생성",
+        "description": "새로운 todo 항목을 생성합니다.",
+        "responses": {
+          "201": {
+            "description": "Todo 생성 성공",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Todo"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "서버 에러"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Todo"
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/todos/{todoid}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "todoid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "todoid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "todoid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
-  "swaggerDefinition": {
-    "openapi": "3.0.0",
-    "info": {
-      "title": "BooLock API",
-      "version": "0.1.0",
-      "description": "BooLock API with express"
-    },
-    "servers": [
-      {
-        "url": "localhost:3000"
+  "openapi": "3.0.0",
+  "servers": [
+    {
+      "url": "http://localhost:3000/"
+    }
+  ],
+  "components": {
+    "schemas": {
+      "Todo": {
+        "type": "object",
+        "properties": {
+          "todoid": {
+            "type": "integer",
+            "example": 1
+          },
+          "content": {
+            "type": "string",
+            "example": "Sample todo content"
+          },
+          "completed": {
+            "type": "string",
+            "example": "false"
+          },
+          "created": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2024-11-07T00:00:00.000Z"
+          }
+        },
+        "required": [
+          "todoid",
+          "content"
+        ]
       }
-    ],
-    "basePath": "/"
-  },
-  "apis": ["./src/routes/v1/*.ts", "/src/docs/*.yaml"]
+    }
+  }
 }
